// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`fixtures lint code blocks should work as expected: code-blocks/278.md 1`] = `
[
  {
    "column": 1,
    "endColumn": 6,
    "endLine": 3,
    "line": 3,
    "message": "Unexpected duplicate toplevel heading, exected a single heading with rank \`1\`",
    "ruleId": "remark-lint-no-multiple-toplevel-headings",
    "severity": 1,
  },
  {
    "column": 1,
    "endColumn": 6,
    "endLine": 3,
    "line": 3,
    "message": "Unexpected heading with equivalent text in section, expected unique headings",
    "ruleId": "remark-lint-no-duplicate-headings-in-section",
    "severity": 1,
  },
  {
    "column": 8,
    "endColumn": 22,
    "endLine": 10,
    "line": 10,
    "message": "Unexpected var, use let or const instead.",
    "messageId": "unexpectedVar",
    "ruleId": "no-var",
    "severity": 2,
  },
  {
    "column": 1,
    "endColumn": 4,
    "endLine": 17,
    "line": 15,
    "message": "Unexpected missing fenced code language flag in info string, expected keyword",
    "ruleId": "remark-lint-fenced-code-flag",
    "severity": 1,
  },
  {
    "column": 32,
    "fatal": true,
    "line": 26,
    "message": "Parsing error: Unexpected token. Did you mean \`{'>'}\` or \`&gt;\`?",
    "ruleId": null,
    "severity": 2,
  },
  {
    "column": 1,
    "endColumn": 6,
    "endLine": 38,
    "line": 38,
    "message": "Unexpected duplicate toplevel heading, exected a single heading with rank \`1\`",
    "ruleId": "remark-lint-no-multiple-toplevel-headings",
    "severity": 1,
  },
  {
    "column": 1,
    "endColumn": 6,
    "endLine": 38,
    "line": 38,
    "message": "Unexpected heading with equivalent text in section, expected unique headings",
    "ruleId": "remark-lint-no-duplicate-headings-in-section",
    "severity": 1,
  },
  {
    "column": 1,
    "endColumn": 6,
    "endLine": 50,
    "line": 50,
    "message": "Unexpected duplicate toplevel heading, exected a single heading with rank \`1\`",
    "ruleId": "remark-lint-no-multiple-toplevel-headings",
    "severity": 1,
  },
  {
    "column": 1,
    "endColumn": 6,
    "endLine": 50,
    "line": 50,
    "message": "Unexpected heading with equivalent text in section, expected unique headings",
    "ruleId": "remark-lint-no-duplicate-headings-in-section",
    "severity": 1,
  },
]
`;

exports[`fixtures lint code blocks should work as expected: code-blocks/455.mdx 1`] = `
[
  {
    "column": 1,
    "endColumn": 6,
    "endLine": 2,
    "fix": {
      "range": [
        25,
        28,
      ],
      "text": "let",
    },
    "line": 2,
    "message": "Unexpected var, use let or const instead.",
    "messageId": "unexpectedVar",
    "ruleId": "no-var",
    "severity": 2,
  },
  {
    "column": 5,
    "endColumn": 6,
    "endLine": 4,
    "fix": {
      "range": [
        32,
        49,
      ],
      "text": "const b = [1, 2, 3]",
    },
    "line": 4,
    "message": "'b' is never reassigned. Use 'const' instead.",
    "messageId": "useConst",
    "ruleId": "prefer-const",
    "severity": 2,
  },
]
`;

exports[`fixtures lint code blocks should work as expected: code-blocks/455.mdx 2`] = `
"\`\`\`js filename="test.js"
let a

const b = [1, 2, 3]

const c = b[b.length - 1]

export { c }
\`\`\`
"
`;

exports[`fixtures lint code blocks should work as expected: code-blocks/470.mdx 1`] = `
[
  {
    "column": 3,
    "endColumn": 23,
    "endLine": 3,
    "line": 3,
    "message": "Identifier 'im_not_camel_case_oops' is not in camel case.",
    "messageId": "notCamelCase",
    "ruleId": "camelcase",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 23,
    "endLine": 3,
    "line": 3,
    "message": "Expected an assignment or function call and instead saw an expression.",
    "messageId": "unusedExpression",
    "ruleId": "@typescript-eslint/no-unused-expressions",
    "severity": 2,
  },
  {
    "column": 1,
    "endColumn": 23,
    "endLine": 8,
    "line": 8,
    "message": "Identifier 'im_not_camel_case_oops' is not in camel case.",
    "messageId": "notCamelCase",
    "ruleId": "camelcase",
    "severity": 2,
  },
  {
    "column": 1,
    "endColumn": 23,
    "endLine": 8,
    "line": 8,
    "message": "Expected an assignment or function call and instead saw an expression.",
    "messageId": "unusedExpression",
    "ruleId": "@typescript-eslint/no-unused-expressions",
    "severity": 2,
  },
]
`;

exports[`fixtures lint code blocks should work as expected: code-blocks/534.mdx 1`] = `
[
  {
    "column": 7,
    "endColumn": 49,
    "endLine": 4,
    "fix": {
      "range": [
        117,
        193,
      ],
      "text": "const deployProjectCommand: DeployProjectCommand = new DeployProjectCommand();",
    },
    "line": 4,
    "message": "'deployProjectCommand' is never reassigned. Use 'const' instead.",
    "messageId": "useConst",
    "ruleId": "prefer-const",
    "severity": 2,
  },
  {
    "column": 1,
    "endColumn": 10,
    "endLine": 20,
    "fix": {
      "range": [
        0,
        735,
      ],
      "text": "\`\`\`ts
import { CommandRegister } from "@foo";
export function registerCommands(commandRegister: CommandRegister) {
  let deployProjectCommand: DeployProjectCommand = new DeployProjectCommand();
  commandRegister.addCommand(deployProjectCommand);
}
\`\`\`

{/* eslint-skip */}

\`\`\`ts
import { CommandRegister } from "@foo";
export function registerCommands(commandRegister: CommandRegister) {
  let deployProjectCommand: DeployProjectCommand = new DeployProjectCommand();
  commandRegister.addCommand(deployProjectCommand);
}
\`\`\`

# Heading

# Heading

{/* nothing special */}

{/* eslint-disable mdx/remark */}

# Heading

{/* eslint-enable mdx/remark */}

Content {/* nothing special */}

# Heading {/* eslint-disable-line mdx/remark */}
",
    },
    "line": 20,
    "message": "Unexpected duplicate toplevel heading, exected a single heading with rank \`1\`",
    "ruleId": "remark-lint-no-multiple-toplevel-headings",
    "severity": 1,
  },
  {
    "column": 1,
    "endColumn": 10,
    "endLine": 20,
    "line": 20,
    "message": "Unexpected heading with equivalent text in section, expected unique headings",
    "ruleId": "remark-lint-no-duplicate-headings-in-section",
    "severity": 1,
  },
]
`;

exports[`fixtures lint code blocks should work as expected: code-blocks/534.mdx 2`] = `
"\`\`\`ts
import { CommandRegister } from "@foo";
export function registerCommands(commandRegister: CommandRegister) {
  const deployProjectCommand: DeployProjectCommand = new DeployProjectCommand();
  commandRegister.addCommand(deployProjectCommand);
}
\`\`\`

{/* eslint-skip */}

\`\`\`ts
import { CommandRegister } from "@foo";
export function registerCommands(commandRegister: CommandRegister) {
  let deployProjectCommand: DeployProjectCommand = new DeployProjectCommand();
  commandRegister.addCommand(deployProjectCommand);
}
\`\`\`

# Heading

# Heading

{/* nothing special */}

{/* eslint-disable mdx/remark */}

# Heading

{/* eslint-enable mdx/remark */}

Content {/* nothing special */}

# Heading {/* eslint-disable-line mdx/remark */}
"
`;

exports[`fixtures should match all snapshots: 287.mdx 1`] = `[]`;

exports[`fixtures should match all snapshots: 292.mdx 1`] = `
[
  {
    "column": 46,
    "endColumn": 58,
    "endLine": 5,
    "line": 5,
    "message": "Unknown property 'story' found",
    "messageId": "unknownProp",
    "ruleId": "react/no-unknown-property",
    "severity": 2,
  },
]
`;

exports[`fixtures should match all snapshots: 334.mdx 1`] = `[]`;

exports[`fixtures should match all snapshots: 336.mdx 1`] = `[]`;

exports[`fixtures should match all snapshots: 367.mdx 1`] = `[]`;

exports[`fixtures should match all snapshots: 371.mdx 1`] = `[]`;

exports[`fixtures should match all snapshots: 380.mdx 1`] = `[]`;

exports[`fixtures should match all snapshots: 391.mdx 1`] = `
[
  {
    "column": 2,
    "endColumn": 5,
    "endLine": 7,
    "line": 7,
    "message": "'Foo' is not defined.",
    "messageId": "undefined",
    "ruleId": "react/jsx-no-undef",
    "severity": 2,
  },
]
`;

exports[`fixtures should match all snapshots: 429.mdx 1`] = `[]`;

exports[`fixtures should match all snapshots: 435.mdx 1`] = `
[
  {
    "column": 6,
    "endColumn": 16,
    "endLine": 12,
    "line": 12,
    "message": "'Components' is not defined.",
    "messageId": "undefined",
    "ruleId": "react/jsx-no-undef",
    "severity": 2,
  },
]
`;

exports[`fixtures should match all snapshots: 437.mdx 1`] = `
[
  {
    "column": 2,
    "endColumn": 5,
    "endLine": 1,
    "line": 1,
    "message": "'App' is not defined.",
    "messageId": "undefined",
    "ruleId": "react/jsx-no-undef",
    "severity": 2,
  },
  {
    "column": 11,
    "endColumn": 18,
    "endLine": 1,
    "fix": {
      "range": [
        10,
        17,
      ],
      "text": ""foo"",
    },
    "line": 1,
    "message": "Curly braces are unnecessary here.",
    "messageId": "unnecessaryCurly",
    "ruleId": "react/jsx-curly-brace-presence",
    "severity": 2,
  },
  {
    "column": 20,
    "line": 1,
    "message": "\`'\` can be escaped with \`&apos;\`, \`&lsquo;\`, \`&#39;\`, \`&rsquo;\`.",
    "messageId": "unescapedEntityAlts",
    "ruleId": "react/no-unescaped-entities",
    "severity": 2,
    "suggestions": [
      {
        "data": {
          "alt": "&apos;",
        },
        "desc": "Replace with \`&apos;\`.",
        "fix": {
          "range": [
            19,
            24,
          ],
          "text": "&apos;bar'",
        },
        "messageId": "replaceWithAlt",
      },
      {
        "data": {
          "alt": "&lsquo;",
        },
        "desc": "Replace with \`&lsquo;\`.",
        "fix": {
          "range": [
            19,
            24,
          ],
          "text": "&lsquo;bar'",
        },
        "messageId": "replaceWithAlt",
      },
      {
        "data": {
          "alt": "&#39;",
        },
        "desc": "Replace with \`&#39;\`.",
        "fix": {
          "range": [
            19,
            24,
          ],
          "text": "&#39;bar'",
        },
        "messageId": "replaceWithAlt",
      },
      {
        "data": {
          "alt": "&rsquo;",
        },
        "desc": "Replace with \`&rsquo;\`.",
        "fix": {
          "range": [
            19,
            24,
          ],
          "text": "&rsquo;bar'",
        },
        "messageId": "replaceWithAlt",
      },
    ],
  },
  {
    "column": 24,
    "line": 1,
    "message": "\`'\` can be escaped with \`&apos;\`, \`&lsquo;\`, \`&#39;\`, \`&rsquo;\`.",
    "messageId": "unescapedEntityAlts",
    "ruleId": "react/no-unescaped-entities",
    "severity": 2,
    "suggestions": [
      {
        "data": {
          "alt": "&apos;",
        },
        "desc": "Replace with \`&apos;\`.",
        "fix": {
          "range": [
            19,
            24,
          ],
          "text": "'bar&apos;",
        },
        "messageId": "replaceWithAlt",
      },
      {
        "data": {
          "alt": "&lsquo;",
        },
        "desc": "Replace with \`&lsquo;\`.",
        "fix": {
          "range": [
            19,
            24,
          ],
          "text": "'bar&lsquo;",
        },
        "messageId": "replaceWithAlt",
      },
      {
        "data": {
          "alt": "&#39;",
        },
        "desc": "Replace with \`&#39;\`.",
        "fix": {
          "range": [
            19,
            24,
          ],
          "text": "'bar&#39;",
        },
        "messageId": "replaceWithAlt",
      },
      {
        "data": {
          "alt": "&rsquo;",
        },
        "desc": "Replace with \`&rsquo;\`.",
        "fix": {
          "range": [
            19,
            24,
          ],
          "text": "'bar&rsquo;",
        },
        "messageId": "replaceWithAlt",
      },
    ],
  },
]
`;

exports[`fixtures should match all snapshots: 437.mdx 2`] = `
"<App prop="foo">{'bar'}</App>
"
`;

exports[`fixtures should match all snapshots: 445.mdx 1`] = `
[
  {
    "column": 1,
    "endColumn": 8,
    "endLine": 9,
    "fix": {
      "range": [
        178,
        187,
      ],
      "text": " />",
    },
    "line": 9,
    "message": "Empty components are self-closing",
    "messageId": "notSelfClosing",
    "ruleId": "react/self-closing-comp",
    "severity": 2,
  },
  {
    "column": 2,
    "endColumn": 3,
    "endLine": 9,
    "line": 9,
    "message": "'A' is not defined.",
    "messageId": "undefined",
    "ruleId": "react/jsx-no-undef",
    "severity": 2,
  },
]
`;

exports[`fixtures should match all snapshots: 445.mdx 2`] = `
"import { DefinitionList } from './DefinitionList'

<DefinitionList disabled>
  <DefinitionList.Title>Hello World !</DefinitionList.Title>
</DefinitionList>

<A:B ></A:B >

<A.B.C />
"
`;

exports[`fixtures should match all snapshots: 450.mdx 1`] = `[]`;

exports[`fixtures should match all snapshots: 488.mdx 1`] = `
[
  {
    "column": 2,
    "endColumn": 7,
    "endLine": 1,
    "line": 1,
    "message": "'Image' is not defined.",
    "messageId": "undefined",
    "ruleId": "react/jsx-no-undef",
    "severity": 2,
  },
]
`;

exports[`fixtures should match all snapshots: 576.mdx 1`] = `[]`;

exports[`fixtures should match all snapshots: acorn.mdx 1`] = `
[
  {
    "column": 33,
    "fatal": true,
    "line": 9,
    "message": "Parsing error: Unexpected character \`\\\` (U+005C) in name, expected a name character such as letters, digits, \`$\`, or \`_\`; whitespace before attributes; or the end of the tag",
    "ruleId": null,
    "severity": 2,
  },
]
`;

exports[`fixtures should match all snapshots: adjacent.mdx 1`] = `[]`;

exports[`fixtures should match all snapshots: async/test.md 1`] = `
[
  {
    "column": 1,
    "endColumn": 15,
    "endLine": 1,
    "line": 1,
    "message": "Cannot find file \`test\`",
    "ruleId": "remark-validate-links:missing-file-missing-file",
    "severity": 1,
  },
]
`;

exports[`fixtures should match all snapshots: basic.mdx 1`] = `
[
  {
    "column": 1,
    "endColumn": 8,
    "endLine": 19,
    "fix": {
      "range": [
        275,
        309,
      ],
      "text": " />",
    },
    "line": 19,
    "message": "Empty components are self-closing",
    "messageId": "notSelfClosing",
    "ruleId": "react/self-closing-comp",
    "severity": 2,
  },
]
`;

exports[`fixtures should match all snapshots: basic.mdx 2`] = `
"import Basic from './basic'

export const meta={
  title: 'Blog Post',
}

# Blog Post

Lorem ipsum dolor sit amet, consectetur adipiscing **elit**. Ut ac lobortis <b>velit</b>.

{/* This is a comment */}

\`\`\`css
@media (min-width: 400px) {
  border-color: #000;
}
\`\`\`

<Basic />

## Subtitle

Lorem ipsum dolor sit _amet_, consectetur adipiscing elit. Ut ac lobortis velit.
"
`;

exports[`fixtures should match all snapshots: basic.tsx 1`] = `[]`;

exports[`fixtures should match all snapshots: blank-lines.mdx 1`] = `
[
  {
    "column": 1,
    "endColumn": 33,
    "endLine": 17,
    "line": 17,
    "message": "Cannot find file <RELATIVE_GETTING_STARTED_NEXT>",
    "ruleId": "remark-validate-links:missing-file-missing-file",
    "severity": 1,
  },
  {
    "column": 1,
    "endColumn": 34,
    "endLine": 18,
    "line": 18,
    "message": "Cannot find file <RELATIVE_GETTING_STARTED_GATSBY>",
    "ruleId": "remark-validate-links:missing-file-missing-file",
    "severity": 1,
  },
  {
    "column": 1,
    "endColumn": 54,
    "endLine": 19,
    "line": 19,
    "message": "Cannot find file <RELATIVE_GETTING_STARTED_CREATE_REACT_APP>",
    "ruleId": "remark-validate-links:missing-file-missing-file",
    "severity": 1,
  },
  {
    "column": 1,
    "endColumn": 46,
    "endLine": 20,
    "line": 20,
    "message": "Cannot find file <RELATIVE_GETTING_STARTED_REACT_STATIC>",
    "ruleId": "remark-validate-links:missing-file-missing-file",
    "severity": 1,
  },
  {
    "column": 1,
    "endColumn": 36,
    "endLine": 21,
    "line": 21,
    "message": "Cannot find file <RELATIVE_GETTING_STARTED_WEBPACK>",
    "ruleId": "remark-validate-links:missing-file-missing-file",
    "severity": 1,
  },
  {
    "column": 1,
    "endColumn": 34,
    "endLine": 22,
    "line": 22,
    "message": "Cannot find file <RELATIVE_GETTING_STARTED_PARCEL>",
    "ruleId": "remark-validate-links:missing-file-missing-file",
    "severity": 1,
  },
  {
    "column": 1,
    "endColumn": 30,
    "endLine": 23,
    "line": 23,
    "message": "Cannot find file <RELATIVE_GETTING_STARTED_ZERO>",
    "ruleId": "remark-validate-links:missing-file-missing-file",
    "severity": 1,
  },
  {
    "column": 1,
    "endColumn": 16,
    "endLine": 27,
    "fix": {
      "range": [
        0,
        768,
      ],
      "text": "import {Box} from '@rebass/emotion'

# Getting Started

If you have an existing project you want to integrate MDX with, check out
the installation guides.

<Box
  p={3}
  bg="lightgray"
  style={{
  textAlign: 'center',
  fontWeight: 'bold',
}}
>
  [Next.js](/getting-started/next) |
  [Gatsby](/getting-started/gatsby) |
  [Create React App](/getting-started/create-react-app) |
  [React Static](/getting-started/react-static) |
  [Webpack](/getting-started/webpack) |
  [Parcel](/getting-started/parcel) |
  [Zero](/getting-started/zero)
</Box>

# Hello, world!

Here's a Twitter shortcode:

<Tweet tweetId="1116723357410447360" />

<TextGradient>
  # Here's a text gradient shortcode!
</TextGradient>

Here's a YouTube shortcode:

<YouTube videoId="4fHw4GeW3EU" />
",
    },
    "line": 27,
    "message": "Unexpected duplicate toplevel heading, exected a single heading with rank \`1\`",
    "ruleId": "remark-lint-no-multiple-toplevel-headings",
    "severity": 1,
  },
  {
    "column": 2,
    "endColumn": 7,
    "endLine": 31,
    "line": 31,
    "message": "'Tweet' is not defined.",
    "messageId": "undefined",
    "ruleId": "react/jsx-no-undef",
    "severity": 2,
  },
  {
    "column": 2,
    "endColumn": 14,
    "endLine": 33,
    "line": 33,
    "message": "'TextGradient' is not defined.",
    "messageId": "undefined",
    "ruleId": "react/jsx-no-undef",
    "severity": 2,
  },
  {
    "column": 1,
    "endColumn": 36,
    "endLine": 35,
    "line": 35,
    "message": "Unexpected duplicate toplevel heading, exected a single heading with rank \`1\`",
    "ruleId": "remark-lint-no-multiple-toplevel-headings",
    "severity": 1,
  },
  {
    "column": 2,
    "endColumn": 9,
    "endLine": 41,
    "line": 41,
    "message": "'YouTube' is not defined.",
    "messageId": "undefined",
    "ruleId": "react/jsx-no-undef",
    "severity": 2,
  },
]
`;

exports[`fixtures should match all snapshots: blank-lines.mdx 2`] = `
"import {Box} from '@rebass/emotion'

# Getting Started

If you have an existing project you want to integrate MDX with, check out
the installation guides.

<Box
  p={3}
  bg="lightgray"
  style={{
textAlign: 'center',
fontWeight: 'bold',
}}
>
  [Next.js](/getting-started/next) |
  [Gatsby](/getting-started/gatsby) |
  [Create React App](/getting-started/create-react-app) |
  [React Static](/getting-started/react-static) |
  [Webpack](/getting-started/webpack) |
  [Parcel](/getting-started/parcel) |
  [Zero](/getting-started/zero)
</Box>

# Hello, world!

Here's a Twitter shortcode:

<Tweet tweetId="1116723357410447360" />

<TextGradient>
  # Here's a text gradient shortcode!
</TextGradient>

Here's a YouTube shortcode:

<YouTube videoId="4fHw4GeW3EU" />
"
`;

exports[`fixtures should match all snapshots: code-blocks/278.md 1`] = `
[
  {
    "column": 1,
    "endColumn": 6,
    "endLine": 3,
    "line": 3,
    "message": "Unexpected duplicate toplevel heading, exected a single heading with rank \`1\`",
    "ruleId": "remark-lint-no-multiple-toplevel-headings",
    "severity": 1,
  },
  {
    "column": 1,
    "endColumn": 6,
    "endLine": 3,
    "line": 3,
    "message": "Unexpected heading with equivalent text in section, expected unique headings",
    "ruleId": "remark-lint-no-duplicate-headings-in-section",
    "severity": 1,
  },
  {
    "column": 1,
    "endColumn": 4,
    "endLine": 17,
    "line": 15,
    "message": "Unexpected missing fenced code language flag in info string, expected keyword",
    "ruleId": "remark-lint-fenced-code-flag",
    "severity": 1,
  },
]
`;

exports[`fixtures should match all snapshots: code-blocks/455.mdx 1`] = `[]`;

exports[`fixtures should match all snapshots: code-blocks/470.mdx 1`] = `[]`;

exports[`fixtures should match all snapshots: code-blocks/534.mdx 1`] = `
[
  {
    "column": 1,
    "endColumn": 10,
    "endLine": 20,
    "fix": {
      "range": [
        0,
        735,
      ],
      "text": "\`\`\`ts
import { CommandRegister } from "@foo";
export function registerCommands(commandRegister: CommandRegister) {
  let deployProjectCommand: DeployProjectCommand = new DeployProjectCommand();
  commandRegister.addCommand(deployProjectCommand);
}
\`\`\`

{/* eslint-skip */}

\`\`\`ts
import { CommandRegister } from "@foo";
export function registerCommands(commandRegister: CommandRegister) {
  let deployProjectCommand: DeployProjectCommand = new DeployProjectCommand();
  commandRegister.addCommand(deployProjectCommand);
}
\`\`\`

# Heading

# Heading

{/* nothing special */}

{/* eslint-disable mdx/remark */}

# Heading

{/* eslint-enable mdx/remark */}

Content {/* nothing special */}

# Heading {/* eslint-disable-line mdx/remark */}
",
    },
    "line": 20,
    "message": "Unexpected duplicate toplevel heading, exected a single heading with rank \`1\`",
    "ruleId": "remark-lint-no-multiple-toplevel-headings",
    "severity": 1,
  },
  {
    "column": 1,
    "endColumn": 10,
    "endLine": 20,
    "line": 20,
    "message": "Unexpected heading with equivalent text in section, expected unique headings",
    "ruleId": "remark-lint-no-duplicate-headings-in-section",
    "severity": 1,
  },
]
`;

exports[`fixtures should match all snapshots: code-blocks/534.mdx 2`] = `
"\`\`\`ts
import { CommandRegister } from "@foo";
export function registerCommands(commandRegister: CommandRegister) {
  let deployProjectCommand: DeployProjectCommand = new DeployProjectCommand();
  commandRegister.addCommand(deployProjectCommand);
}
\`\`\`

{/* eslint-skip */}

\`\`\`ts
import { CommandRegister } from "@foo";
export function registerCommands(commandRegister: CommandRegister) {
  let deployProjectCommand: DeployProjectCommand = new DeployProjectCommand();
  commandRegister.addCommand(deployProjectCommand);
}
\`\`\`

# Heading

# Heading

{/* nothing special */}

{/* eslint-disable mdx/remark */}

# Heading

{/* eslint-enable mdx/remark */}

Content {/* nothing special */}

# Heading {/* eslint-disable-line mdx/remark */}
"
`;

exports[`fixtures should match all snapshots: comments.mdx 1`] = `
[
  {
    "column": 2,
    "fatal": true,
    "line": 2,
    "message": "Parsing error: Unexpected character \`!\` (U+0021) before name, expected a character that can start a name, such as a letter, \`$\`, or \`_\` (note: to create a comment in MDX, use \`{/* text */}\`)",
    "ruleId": null,
    "severity": 2,
  },
]
`;

exports[`fixtures should match all snapshots: custom-remarkrc/test.md 1`] = `[]`;

exports[`fixtures should match all snapshots: details.mdx 1`] = `
[
  {
    "column": 1,
    "fatal": true,
    "line": 1,
    "message": "Parsing error: Expected a closing tag for \`<details>\` (1:1-1:10) before the end of \`paragraph\`",
    "ruleId": null,
    "severity": 2,
  },
]
`;

exports[`fixtures should match all snapshots: esm/test.md 1`] = `
[
  {
    "column": 1,
    "endColumn": 15,
    "endLine": 1,
    "line": 1,
    "message": "Cannot find file \`test\`",
    "ruleId": "remark-validate-links:missing-file-missing-file",
    "severity": 1,
  },
]
`;

exports[`fixtures should match all snapshots: jsx-in-list.mdx 1`] = `
[
  {
    "column": 46,
    "endColumn": 58,
    "endLine": 1,
    "line": 1,
    "message": "Unknown property 'story' found",
    "messageId": "unknownProp",
    "ruleId": "react/no-unknown-property",
    "severity": 2,
  },
  {
    "column": 46,
    "endColumn": 58,
    "endLine": 5,
    "line": 5,
    "message": "Unknown property 'story' found",
    "messageId": "unknownProp",
    "ruleId": "react/no-unknown-property",
    "severity": 2,
  },
  {
    "column": 46,
    "endColumn": 58,
    "endLine": 9,
    "line": 9,
    "message": "Unknown property 'story' found",
    "messageId": "unknownProp",
    "ruleId": "react/no-unknown-property",
    "severity": 2,
  },
  {
    "column": 46,
    "endColumn": 58,
    "endLine": 13,
    "line": 13,
    "message": "Unknown property 'story' found",
    "messageId": "unknownProp",
    "ruleId": "react/no-unknown-property",
    "severity": 2,
  },
  {
    "column": 46,
    "endColumn": 58,
    "endLine": 17,
    "line": 17,
    "message": "Unknown property 'story' found",
    "messageId": "unknownProp",
    "ruleId": "react/no-unknown-property",
    "severity": 2,
  },
  {
    "column": 46,
    "endColumn": 58,
    "endLine": 21,
    "line": 21,
    "message": "Unknown property 'story' found",
    "messageId": "unknownProp",
    "ruleId": "react/no-unknown-property",
    "severity": 2,
  },
]
`;

exports[`fixtures should match all snapshots: leading-spaces.mdx 1`] = `[]`;

exports[`fixtures should match all snapshots: markdown.md 1`] = `[]`;

exports[`fixtures should match all snapshots: no-unescaped-entities.mdx 1`] = `
[
  {
    "column": 8,
    "line": 2,
    "message": "\`>\` can be escaped with \`&gt;\`.",
    "messageId": "unescapedEntityAlts",
    "ruleId": "react/no-unescaped-entities",
    "severity": 2,
    "suggestions": [
      {
        "data": {
          "alt": "&gt;",
        },
        "desc": "Replace with \`&gt;\`.",
        "fix": {
          "range": [
            32,
            35,
          ],
          "text": " &gt; ",
        },
        "messageId": "replaceWithAlt",
      },
    ],
  },
  {
    "column": 13,
    "line": 5,
    "message": "\`>\` can be escaped with \`&gt;\`.",
    "messageId": "unescapedEntityAlts",
    "ruleId": "react/no-unescaped-entities",
    "severity": 2,
    "suggestions": [
      {
        "data": {
          "alt": "&gt;",
        },
        "desc": "Replace with \`&gt;\`.",
        "fix": {
          "range": [
            88,
            91,
          ],
          "text": " &gt; ",
        },
        "messageId": "replaceWithAlt",
      },
    ],
  },
]
`;

exports[`fixtures should match all snapshots: no-unused-expressions.mdx 1`] = `
[
  {
    "column": 2,
    "endColumn": 7,
    "endLine": 1,
    "line": 1,
    "message": "'Story' is not defined.",
    "messageId": "undefined",
    "ruleId": "react/jsx-no-undef",
    "severity": 2,
  },
]
`;

exports[`fixtures should match all snapshots: processor.mdx 1`] = `
[
  {
    "column": 1,
    "endColumn": 6,
    "endLine": 3,
    "line": 3,
    "message": "Unexpected duplicate toplevel heading, exected a single heading with rank \`1\`",
    "ruleId": "remark-lint-no-multiple-toplevel-headings",
    "severity": 1,
  },
  {
    "column": 1,
    "endColumn": 6,
    "endLine": 3,
    "line": 3,
    "message": "Unexpected heading with equivalent text in section, expected unique headings",
    "ruleId": "remark-lint-no-duplicate-headings-in-section",
    "severity": 1,
  },
]
`;

exports[`fixtures should match all snapshots: remark.md 1`] = `[]`;

exports[`fixtures should match all snapshots: remark.mdx 1`] = `[]`;

exports[`fixtures should match all snapshots: style/nested.md 1`] = `[]`;

exports[`fixtures should match all snapshots: unicorn.jsx 1`] = `
[
  {
    "column": 2,
    "endColumn": 9,
    "endLine": 1,
    "line": 1,
    "message": "'React' must be in scope when using JSX",
    "messageId": "notInScope",
    "ruleId": "react/react-in-jsx-scope",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 8,
    "endLine": 1,
    "line": 1,
    "message": "'Story' is not defined.",
    "messageId": "undefined",
    "ruleId": "react/jsx-no-undef",
    "severity": 2,
  },
]
`;

exports[`fixtures should match all snapshots: unicorn.mdx 1`] = `
[
  {
    "column": 2,
    "endColumn": 7,
    "endLine": 1,
    "line": 1,
    "message": "'Story' is not defined.",
    "messageId": "undefined",
    "ruleId": "react/jsx-no-undef",
    "severity": 2,
  },
]
`;
